cambios de ajuste de imagenes

--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
         <img
           src="./img/rompecabezas.jpg.PNG"
           alt="rompecabeza con elementos como:corazon,reloj de arena,lamparita "
+          width="800px
+          "
+          height="400px
+          "
         />
       </div>
       <!--Left-->
