--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
+    <!--  meta tags -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>vlseguros</title>
-
-    <link rel="stylesheet" href="../CSS/estilos.css" />
 
     <!--Tipografia-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -19,171 +18,75 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+
+    <!--Boostrap-->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
+      integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"
+      integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/"
+      crossorigin="anonymous"
+    ></script>
+    <!--CSS-->
+    <link rel="stylesheet" href="../CSS/estilos.css" />
+    <!--JS-->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
+      crossorigin="anonymous"
+    />
   </head>
+  <!--Animacion-->
+  <script src="js/wow.min.js"></script>
+  <script>
+    new WOW().init();
+  </script>
 
   <body>
-    <header>
-      <!--LOGO-->
-      <div class="header">
-        <div class="logo">
-          <img
-            src="../img/logo.jpng.PNG"
-            alt="logo de la pagina "
-            width="200"
-          />
-        </div>
-        <!--REDES-->
-        <div>
-          <ul>
-            <li>
-              <a
-                href="https://www.linkedin.com/in/lorena-viviani-consultor-de-seguros-8747101b"
-                target="_blank"
-              >
-                <img src="../img/linkedin.PNG" width="80" alt="icono linkedin"
-              /></a>
-            </li>
-
-            <li>
-              <a
-                href="https://www.instagram.com/lviviani.seguros/"
-                target="_blank"
-              >
-                <img
-                  src="../img/instagram.PNG"
-                  alt="icono instagram"
-                  width="60"
-              /></a>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <!--NAV-->
-      <nav class="menu">
-        <div>
-          <ul>
-            <li><a href="../index.html">Incio</a></li>
-            <li>
-              <a href="./work1.html">Proteccion familiar</a>
-            </li>
-            <li>
-              <a href="./work2.html">Armado de Capital</a>
-            </li>
-            <li>
-              <a href="./work3.html">Proteccion de emprendimientos</a>
-            </li>
-            <li><a href="contacto.html">Contacto</a></li>
-            <li>
-              <a href="./img.html">Galeria</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </header>
-    <!--Main-->
-    <main>
-      <h1 class="charlemos">Charlemos</h1>
-
-      <div>
-        <form action="/send.php" name="formulario" method="POST">
-          <fieldset class="form">
-            <legend class="comunicate">Comunicate</legend>
-            <label for="nombre"></label>
-
-            <div>
-              <p class="f">
-                Nombre: <br />
-                <input type="text" id="nombre" name="nombre" />
-              </p>
-              <p class="f">
-                Apellido:<br />
-                <input type="text" id="apellido" />
-              </p>
-              <p class="f">
-                Email: <br />
-                <input
-                  type="email"
-                  name="email"
-                  placeholder="nombre@email.com"
-                />
-              </p>
-            </div>
-            <br />
-
-            <div class="f">
-              Tipo de seguro:<select name="Tipo de seguro" id="size">
-                <option value="Familiar">Proteccion familiar</option>
-                <option value="Capital">Armado de capital</option>
-                <option value="Emprendimiento">
-                  Proteccion de emprendimiento
-                </option></select
-              ><br />
-              <textarea
-                name="mensaje"
-                id="mensaje"
-                cols="30"
-                rows="10"
-                placeholder="Mensaje"
-              ></textarea>
-
-              <div>
-                Acepta terminos y condciones<input
-                  type="checkbox"
-                  name="aceptar"
-                  value="1"
-                />
-                <br />
-                <input type="submit" value="Enviar" />
-                <input type="reset" value="Restablecer" />
-              </div>
-            </div>
-          </fieldset>
-        </form>
-      </div>
-
-      <h4>Ver para lograr</h4>
-    </main>
-    <!--Footer-->
-    <footer>
-      <div>
+    <div class="conteiner fondo">
+      <header>
         <!--LOGO-->
-        <div class="logo">
-          <img
-            src="../img/logo.jpng.PNG"
-            alt="logo de la pagina "
-            width="200"
-          />
-        </div>
-        <!--NAV-->
-        <div class="menuAbajo">
-          <ul>
-            <li><a href="../index.html">Incio</a></li>
-            <li>
-              <a href="./work1.html">Proteccion familiar</a>
-            </li>
-            <li>
-              <a href="./work2.html">Armado de Capital</a>
-            </li>
-            <li>
-              <a href="./work3.html">Proteccion de emprendimientos</a>
-            </li>
-          </ul>
-        </div>
         <div>
-          <div class="contactoAbajo">
-            <ul>
-              <li><a href="contacto.html">Contacto</a></li>
-
-              <li>
-                <a href="mailto:lvivianiprodseguros@gmail.com"
-                  >lvivianiprodseguros@gmail.com</a
-                >
-              </li>
-            </ul>
+          <div
+            class="
+              logo
+              d-md-flex
+              justify-content-md-center
+              align-items-md-center
+            "
+          >
+            <img
+              src="../img/logo.jpng.PNG"
+              alt="logo de la pagina "
+              width="200"
+            />
           </div>
           <!--REDES-->
-          <div class="redesAbajo">
-            <ul>
+          <div
+            class="
+              redesUp
+              d-md-flex
+              flex-md-row-reverse
+              justify-content-md-between
+              align-items-md-center
+            "
+          >
+            <ul class="d-md-flex justify-content-md-end">
               <li>
                 <a
                   href="https://www.linkedin.com/in/lorena-viviani-consultor-de-seguros-8747101b"
@@ -209,17 +112,302 @@
               </li>
             </ul>
           </div>
-          <div class="sitio">
-            <ul>
+        </div>
+        <!---NAV-->
+        <div class="h4 menu">
+          <ul class="nav justify-content-center">
+            <li>
+              <a class="nav-link active text-light" href="../index.html"
+                >Inicio</a
+              >
+            </li>
+            <li>
+              <a class="nav-link text-light" href="./work1.html"
+                >Proteccion familiar
+              </a>
+            </li>
+            <li>
+              <a class="nav-link text-light" href="./work2.html"
+                >Armado de capital
+              </a>
+            </li>
+            <li>
+              <a class="nav-link text-light" href="./work3.html"
+                >Proteccion de emprendimiento
+              </a>
+            </li>
+            <li>
+              <a class="nav-link text-light" href="contacto.html">Contacto </a>
+            </li>
+            <li>
+              <a class="nav-link text-light" href="./img.html">Galeria </a>
+            </li>
+          </ul>
+        </div>
+
+        <!--Menu hamburgesa-->
+        <div class="hamburgesa dropdown mb-4">
+          <button
+            class="btn btn-light dropdown-toggle"
+            type="button"
+            id="dropdownMenu2"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            <i class="bi bi-list btn btn-light">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="bi bi-list"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"
+                />
+              </svg>
+            </i>
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+            <li>
+              <button class="dropdown-item" type="button">
+                <a class="text-dark" href="../index.html">Inicio</a>
+              </button>
+            </li>
+            <li>
+              <button class="dropdown-item" type="button">
+                <a class="text-dark" href="./work1.html">Proteccion familiar</a>
+              </button>
+            </li>
+            <li>
+              <button class="dropdown-item" type="button">
+                <a class="text-dark" href="./work2.html">Armado de capital</a>
+              </button>
+            </li>
+            <li>
+              <button class="dropdown-item" type="button">
+                <a class="text-dark" href="./work3.html"
+                  >Proteccion de emprendimiento
+                </a>
+              </button>
+            </li>
+            <li>
+              <button class="dropdown-item" type="button">
+                <a class="text-dark" href="./contacto.html">Contacto</a>
+              </button>
+            </li>
+            <li>
+              <button class="dropdown-item" type="button">
+                <a class="text-dark" href="./img.html">Galeria</a>
+              </button>
+            </li>
+          </ul>
+        </div>
+      </header>
+      <!--Main-->
+      <main>
+        <div>
+          <h1 class="d-md-flex justify-content-md-center">Charlemos</h1>
+        </div>
+        <form
+          class="container mt-5 border bg-light rounded px-4 py-5 text-black"
+        >
+          <div class="row">
+            <div class="col">
+              <label for="exampleInputEmail1" class="form-label">Nombre:</label>
+              <input
+                type="email"
+                class="form-control"
+                id="exampleInputEmail1"
+                aria-describedby="emailHelp"
+              />
+            </div>
+            <div class="col">
+              <label for="exampleInputEmail1" class="form-label"
+                >Apellido:</label
+              >
+              <input
+                type="email"
+                class="form-control"
+                id="exampleInputEmail1"
+                aria-describedby="emailHelp"
+              />
+            </div>
+          </div>
+
+          <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Email:</label>
+            <input
+              type="email"
+              class="form-control"
+              id="exampleInputEmail1"
+              aria-describedby="emailHelp"
+            />
+          </div>
+
+          <div class="dropdown mb-3">
+            <button
+              class="btn btn-secondary dropdown-toggle"
+              type="button"
+              id="dropdownMenu2"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              Opciones
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
               <li>
-                <a href="index.html">@VL SEGUROS 2021</a>
-                |
-                <a href="">sitio por Renata Maidana </a>
+                <button class="dropdown-item" type="button">
+                  Proteccion familiar
+                </button>
+              </li>
+              <li>
+                <button class="dropdown-item" type="button">
+                  Armado de capital
+                </button>
+              </li>
+              <li>
+                <button class="dropdown-item" type="button">
+                  Proteccion de emprendimiento
+                </button>
+              </li>
+            </ul>
+          </div>
+          <div class="form-floating mb-3">
+            <textarea
+              class="form-control"
+              placeholder="Leave a comment here"
+              id="floatingTextarea2"
+              style="height: 100px"
+            ></textarea>
+            <label for="floatingTextarea2">Mensaje</label>
+          </div>
+          <div class="mb-3">
+            <input
+              type="checkbox"
+              class="form-check-input"
+              id="exampleCheck1"
+            />
+            <label class="form-check-label" for="exampleCheck1"
+              >Acepta terminos y condiciones
+            </label>
+          </div>
+          <div class="btn btn-light">
+            <button type="submit" class="btn btn-primary">Enviar</button>
+            <button type="submit" class="btn btn-primary">Restablecer</button>
+          </div>
+        </form>
+
+        <h4
+          class="
+            display-4
+            d-md-flex d-sm-flex
+            justify-content-sm-center justify-content-md-center
+          "
+        >
+          Ver para lograr
+        </h4>
+      </main>
+
+      <footer>
+        <!---LOGO-->
+        <div class="logo d-md-flex justify-content-md-center">
+          <img
+            src="../img/logo.jpng.PNG"
+            alt="logo de la pagina "
+            width="200"
+          />
+        </div>
+        <!--NAV-->
+        <div class="menuAbajo">
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="../index.html"
+                >Inicio</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./work1.html">Proteccion familiar </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./work2.html">Armado de capital </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./work3.html"
+                >Proteccion de emprendimiento
+              </a>
+            </li>
+          </ul>
+
+          <div class="d-md-flex justify-content-md-end align-items-md-center">
+            <ul>
+              <li class="nav-item">
+                <a class="nav-link" href="./contacto.html">Contacto</a>
+              </li>
+              <li>
+                <a href="mailto:lvivianiprodseguros@gmail.com"
+                  >lvivianiprodseguros@gmail.com</a
+                >
               </li>
             </ul>
           </div>
         </div>
-      </div>
-    </footer>
+
+        <!--REDES-->
+        <div
+          class="
+            redesAbajo
+            d-md-flex
+            flex-md-row-reverse
+            justify-content-md-between
+            align-items-md-start
+          "
+        >
+          <ul class="d-md-flex justify-content-md-end">
+            <li>
+              <a
+                href="https://www.linkedin.com/in/lorena-viviani-consultor-de-seguros-8747101b"
+                target="_blank"
+              >
+                <img src="../img/linkedin.PNG" width="80" alt="icono linkedin"
+              /></a>
+            </li>
+
+            <li>
+              <a
+                href="https://www.instagram.com/lviviani.seguros/"
+                target="_blank"
+              >
+                <img
+                  src="../img/instagram.PNG"
+                  alt="icono instagram"
+                  width="60"
+              /></a>
+            </li>
+          </ul>
+        </div>
+        <!--Sitio-->
+        <div class="d-md-flex justify-content-md-center">
+          <ul>
+            <li>
+              <a href="../index.html">@VL SEGUROS 2021</a>
+              |
+              <a href="">sitio por Renata Maidana </a>
+            </li>
+          </ul>
+        </div>
+      </footer>
+    </div>
   </body>
+  <!--Javascript-->
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+    crossorigin="anonymous"
+  ></script>
 </html>
