--- a/index.html
+++ b/index.html
@@ -257,8 +257,8 @@
         </div>
 
         <div>
-          <div class="row g-0">
-            <div class="col-md-4">x
+          <div class="d-flex flex-md-row-reverse  row g-0">
+            <div class="col-md-4">
               <img src="./img/elementos.PNG" class="rounded mx-auto d-block" alt="elemtos
               " width="350"
               />
