correciones de estetica

--- a/index.html
+++ b/index.html
@@ -62,20 +62,61 @@
   </script>
 
   <body>
-    <div class="container fondo">
+    <div class=" fondo">
       <header>
         <!--LOGO-->
 
-        <div
-          class="  d-flex justify-content-center"
-        >
-        <div>
-          <img src="./img/logo.jpng.PNG" class="img-fluid" alt="logo" width="200px">
-        </div>
+        <div class="align-items-sm-center align-items-md-center mx-0">
+          <div
+            class="d-md-flex justify-content-md-center align-items-md-center"
+          >
+            <img
+              src="./img/logo.jpng.PNG"
+              class="rounded mx-auto d-block"
+              alt="logo"
+              width="200px"
+            />
+          </div>
+          <!--REDES-->
+          <div
+            class="
+              redesUp
+              d-md-flex
+              flex-md-row-reverse
+              justify-content-md-between
+              align-items-md-center
+            "
+          >
+            <ul class="d-md-flex justify-content-md-end">
+              <li>
+                <a
+                  href="https://www.linkedin.com/in/lorena-viviani-consultor-de-seguros-8747101b"
+                  target="_blank"
+                >
+                  <img
+                    src="./img/linkedin.PNG"
+                    width="80"
+                    alt="icono linkedin"
+                /></a>
+              </li>
+
+              <li>
+                <a
+                  href="https://www.instagram.com/lviviani.seguros/"
+                  target="_blank"
+                >
+                  <img
+                    src="./img/instagram.PNG"
+                    alt="icono instagram"
+                    width="60"
+                /></a>
+              </li>
+            </ul>
+          </div>
         </div>
           <!--REDES-->
           
-          <ul class=" d-flex justify-content-end" >
+          <ul class="redesUp d-flex justify-content-end" >
             <li>
               <a
               href="https://www.linkedin.com/in/lorena-viviani-consultor-de-seguros-8747101b"
@@ -98,8 +139,8 @@
       </div>
 
         <!---NAV-->
-        <div class="h4 menu">
-          <ul class=" menu__coral nav justify-content-center">
+        <div class="h4 menu ">
+          <ul class="  nav justify-content-center">
             <li>
               <a class="nav-link active text-light" href="index.html">Inicio</a>
             </li>
@@ -291,7 +332,8 @@
       <footer>
         <!---LOGO-->
         <div class=" d-md-flex justify-content-md-center">
-          <img src="./img/logo.jpng.PNG" class="img-fluid" alt="logo" width="200px">
+          
+          <img src="./img/logo.jpng.PNG" class="rounded mx-auto d-block" alt="logo" width="200px">
         </div>
         <!--NAV-->
         <div class="menuAbajo" >
