--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -58,7 +58,7 @@
   </script>
 
   <body>
-    <div class="container fondo">
+    <div class="fondo">
       <header>
         <!--LOGO-->
         <div>
@@ -72,9 +72,10 @@
           >
             <img
               src="../img/logo.jpng.PNG"
-              class="img-fluid"
+              class="rounded mx-auto d-block"
               alt="logo"
-              width="200px"
+              width="200px
+              "
             />
           </div>
           <!--REDES-->
@@ -116,7 +117,7 @@
         </div>
         <!---NAV-->
         <div class="h4 menu">
-          <ul class="menu__coral nav justify-content-center">
+          <ul class="nav justify-content-center">
             <li>
               <a class="nav-link active text-light" href="../index.html"
                 >Inicio</a
@@ -317,9 +318,10 @@
         <div class="d-md-flex justify-content-md-center">
           <img
             src="../img/logo.jpng.PNG"
-            class="img-fluid"
+            class="rounded mx-auto d-block"
             alt="logo"
-            width="200px"
+            width="200px
+            "
           />
         </div>
         <!--NAV-->
