--- a/secciones/img.html
+++ b/secciones/img.html
@@ -7,13 +7,6 @@
     <title>vlseguros</title>
 
     
-    <!-- Bootstrap CSS -->
-    <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
-    crossorigin="anonymous"
-    />
     <!--Tipografia-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -24,6 +17,13 @@
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <!-- Bootstrap CSS -->
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
+    crossorigin="anonymous"
     />
     <!--CSS-->
     <link rel="stylesheet" href="../css/estilos.css" />
@@ -42,7 +42,7 @@
   </script>
 
   <body>
-    <div class="conteiner fondo">
+    <div class=" fondo">
 
       <header>
         <!--LOGO-->
@@ -57,7 +57,7 @@
           >
           <img
           src="../img/logo.jpng.PNG"
-          class="img-fluid"
+          class="rounded mx-auto d-block"
           alt="logo"
           width="200px"
         />
@@ -103,7 +103,7 @@
   </div>
   <!---NAV-->
   <div class="h4 menu">
-    <ul class=" menu__coral nav justify-content-center">
+    <ul class="  nav justify-content-center">
       <li>
         <a class="nav-link active text-light" href="../index.html">Inicio</a>
       </li>
@@ -259,11 +259,12 @@
     "
   >
   <img
-            src="../img/logo.jpng.PNG"
-            class="img-fluid"
-            alt="logo"
-            width="200px"
-          />
+  src="../img/logo.jpng.PNG"
+  class="rounded mx-auto d-block"
+  alt="logo"
+  width="200px
+  "
+/>
   </div>
   <!--NAV-->
   <div class="menuAbajo">
