--- a/secciones/work2.html
+++ b/secciones/work2.html
@@ -60,7 +60,7 @@
   </script>
 
   <body>
-    <div class="container fondo">
+    <div class="fondo">
       <header>
         <!--LOGO-->
         <div class="align-items-md-center mx-0">
@@ -74,7 +74,7 @@
           >
             <img
               src="../img/logo.jpng.PNG"
-              class="img-fluid"
+              class="rounded mx-auto d-block"
               alt="logo"
               width="200px"
             />
@@ -124,7 +124,7 @@
         </div>
         <!---NAV-->
         <div class="h4 menu">
-          <ul class="menu__coral nav justify-content-center">
+          <ul class="nav justify-content-center">
             <li>
               <a class="nav-link active text-light" href="../index.html"
                 >Inicio</a
@@ -270,7 +270,7 @@
         <div class="logo d-md-flex justify-content-md-center">
           <img
             src="../img/logo.jpng.PNG"
-            class="img-fluid"
+            class="rounded mx-auto d-block"
             alt="logo"
             width="200px"
           />
