ajustes de responsive

--- a/secciones/work1.html
+++ b/secciones/work1.html
@@ -235,7 +235,7 @@
           </div>
         </div>
 
-        <div class="video d-md-flex justify-content-md-center">
+        <div class="video d-flex justify-content-center">
           <iframe
             src="https://www.youtube.com/embed/z8Ykf0rVzOw"
             title="YouTube video player"
