--- a/secciones/work3.html
+++ b/secciones/work3.html
@@ -209,7 +209,7 @@
       <!--Main-->
       <main>
         <div>
-          <h1 class="d-md-flex justify-content-md-center">
+          <h1 class="h4 d-flex justify-content-center">
             Proteccion de emprendimiento
           </h1>
         </div>
